Fix Unit tests